--- a/style.css
+++ b/style.css
@@ -1,38 +1,160 @@
 body{
+    display: flex;
+    flex-direction: column;
     margin: 0;
+    gap: 100px;
 }
-.header{
-    background-color: #1F2937;
-    padding: 0 300px 100px 300px;
-}
-li.logo{
-    margin-right: auto;
-    font-size: 24px;
-    font-weight: bold;
-}
-li{
-    font-size: 18px;
+div.header{
+    display: flex;
+    flex-direction: column;
+    background-color: #1f2937;
+    gap: 30px;
+    padding: 20px 100px 100px 100px;
+    margin-bottom: 15px;
 }
 ul{
     display: flex;
+    padding: 0px;
+    margin: 0px;
+    gap: 12px;
+}
+li{
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    margin-left: 0;
-    margin-right: 0;
-    gap: 16px;
-    margin-bottom: 50px;
 }
 a{
     text-decoration: none;
+}
+li.logo{
+    font-size: 24px;
+    margin-right: auto;
+}
+.logo a,
+.maintext{
     color: #F9FAF8;
-
 }
-div.description{
+.h-link a, .h-link{
+    color: #E5E7EB;
+}
+.maintext{
+    font-size: 48px;
+    font-weight: 500;
+}
+button{
+    background: #3882F6;
+    width: 100px;
+    padding: 5px;
+    border-radius: 8px;
+    border: none;
+}
+div.sheader{
     display: flex;
-    
 }
-div.descontainter{
-    justify-content: flex-start;
+div.img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: dotted;
+    flex-basis: 400px;
 }
-
+img.h-img-size{
+    width: 400px;
+    height: 202px;
+}
+div.fbasis{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-right: auto;
+    flex-basis: 350px;
+}
+div.h-link{
+    font-size: 18px;
+}
+/* body */
+.body{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+    margin-bottom: 150px;
+}
+div.info-header{
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+}
+div.wrapper{
+    display: flex;
+    gap: 80px;
+    justify-content: center;
+    height: 230px;
+}
+div.bimg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 3px black;
+    border-radius: 8px;
+    height: 130px;
+    width: 130px;
+    gap: 10px;
+}
+img.imgsize{
+    width: 130px;
+    height: 130px;
+}
+div.text{
+    width: 130px;
+    height: 50px;
+    text-align: center;
+    font-size: 16px;
+}
+/* quote section */
+div.quotes{
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 190px;
+    gap: 30px;
+}
+div.quote-text{
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1F2937;
+}
+div.author{
+    display: flex;
+    justify-content: flex-end;
+    font-size: 20px;
+    font-weight: 700;
+}
+div.invitation{
+    display: flex;
+    gap: 160px;
+    background-color: #3882F6;
+    padding: 60px;
+    width: 800px;
+    margin-top: 100px;
+    border-radius: 15px;
+}
+div.inv-text{
+    font-size: 28px;
+    font-weight: 600;
+}
+div.inv-stext{
+    font-size: 16px;
+}
+div.inv-btn{
+    display: flex;
+    align-items: center;
+}
+div.footer{
+    display: flex;
+    justify-content: center;
+    background-color: #1f2937;
+    padding: 30px;
+}
